--- a/side-drawer/src/components/side-drawer/side-drawer.css
+++ b/side-drawer/src/components/side-drawer/side-drawer.css
@@ -8,3 +8,14 @@ aside {
     background: #e9e9e9;
     box-shadow: 0 2px 8px rgb(0, 0, 0, 0.26);
 }
+
+header {
+    padding: 1rem;
+    background: #ad2b2b;
+}
+
+header > h1 {
+    font-size: 1.5rem;
+    color: #ffffff;
+    margin: 0;
+}
