--- a/side-drawer/src/components/side-drawer/side-drawer.css
+++ b/side-drawer/src/components/side-drawer/side-drawer.css
@@ -7,6 +7,7 @@ aside {
     height: 100vh;
     background: #e9e9e9;
     box-shadow: 0 2px 8px rgb(0, 0, 0, 0.26);
+    transition: left 0.3s ease-out;
 }
 
 header {
