mutable props to close menu button

--- a/side-drawer/src/components/side-drawer/side-drawer.css
+++ b/side-drawer/src/components/side-drawer/side-drawer.css
@@ -13,10 +13,28 @@ aside {
 header {
     padding: 1rem;
     background: #ad2b2b;
+    position: relative;
+    /* display: flex;
+    justify-content: space-between; */
 }
 
 header > h1 {
     font-size: 1.5rem;
     color: #ffffff;
     margin: 0;
+}
+
+header > button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: .6rem;
+    color: #ffffff;
+    background: transparent;
+    font-size: 2rem;
+    border: none;
+}
+
+header > button:focus {
+    outline: none;
 }
